--- a/mamapatxanga.html
+++ b/mamapatxanga.html
@@ -23,19 +23,23 @@
         <p>Mama Patxanga és energia positiva, una amalgama de sons i colors, nou músics a sobre de l’escenari i una hora i mitja d’espectacle frenètic que no deixa a ningú indiferent. La recepta perfecte per a les millors nits de Festa Major.  T’ho perdràs?</p>    
 
       </div>
-      <div class="col-md-5 removeMargin" style="margin-top: 7%">
+      <div class="col-md-5 removeMargin" style="margin-top: 2%">
         <!--<a href="https://www.youtube.com/watch?v=DH0Lgg5jziU">   
           <img class="print" src="C:\Users\Sebastian Zuin\Documents\MamaPatxanga\MamaPatxanga\videoyoutube.jpg" style="width: 100%; height: 15%; display: none">
         </a>-->
-        <div>
-        <iframe class ="hidden-print" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmamapatxanga%2Fvideos%2F1637064989715733%2F&show_text=0&width=560" width="100%" height="29%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="false" allowFullScreen="true"></iframe>  
+
+        <div class="w3-center">
+          <iframe class ="hidden-print" height="25%" style="min-width: 480px; width: auto; max-width: 100%" src="https://www.youtube.com/embed/DH0Lgg5jziU"></iframe>  
         </div>
+
+        <div class="w3-center">
+        <iframe class ="hidden-print" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmamapatxanga%2Fvideos%2F1637064989715733%2F&show_text=0&" height="25%" style="border:none;overflow:hidden;min-width: 480px; width: auto;margin-top: 2%"></iframe>  
+        </div>
+        
         <!--<a href="https://www.facebook.com/mamapatxanga/videos/vb.491131347642442/1637055643050001/?type=2&theater">  
           <img class="print" src="C:\Users\Sebastian Zuin\Documents\MamaPatxanga\MamaPatxanga\videoface.jpg" style="width: 100%; height: 15%; display: none"> 
         </a>-->
-        <div>
-         <iframe class ="hidden-print" width="100%" height="25%" src="https://www.youtube.com/embed/DH0Lgg5jziU"></iframe>  
-         </div>
+        
       </div>
     </div>
       <div class="row hidden-print">
