--- a/mamaPatxangaEmail.html
+++ b/mamaPatxangaEmail.html
@@ -4,7 +4,7 @@
  
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Mamá Patxanga Email</title>
+  <title>A Simple Responsive HTML Email</title>
   <style type="text/css">
   body {margin: 0; padding: 0; min-width: 100%!important;}
   img {height: auto;}
